<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HelpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques1"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans1"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/ll1"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques2"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans2"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_below="@id/ll2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques3"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans3"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_below="@id/ll3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques4"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans4"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/ll4"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques5"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans5"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_below="@id/ll5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques6"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans6"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_below="@id/ll6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques1"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans1"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/ll7"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques2"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans2"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_below="@id/ll8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques3"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans3"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_below="@id/ll9">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques4"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans4"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/ll10"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques5"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans5"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_below="@id/ll11">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques6"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ans6"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:padding="3dp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>